feat[api]: get article with content parsed (#59)
* fix: `GetArticle` logic error

* feat[api]: get article with content parsed to html

* implement interface md2html

* dependency injection

* ! remove xssEscape in `NewArticleContent`

* api doc update
