# docs/swagger.json
@@ -494,6 +494,18 @@
                 }
             }
         },
+        "controller.ResponseData": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "data": {},
+                "msg": {
+                    "type": "string"
+                }
+            }
+        },
         "controller.reqArticle": {
             "type": "object",
             "properties": {
